--- a/docs/Makefile
+++ b/docs/Makefile
@@ -12,6 +12,13 @@ BUILDDIR      = build
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
+html:
+	rm -fr "$(BUILDDIR)/html"
+	@$(SPHINXBUILD) -M html "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+
+conf:
+	@$(SPHINXBUILD) -b confluence "$(SOURCEDIR)" "$(BUILDDIR)/confluence" -E -a -v
+
 .PHONY: help Makefile
 
 # Catch-all target: route all unknown targets to Sphinx using the new
